--- a/index.html
+++ b/index.html
@@ -1,91 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>TRAVEL GUIDE by PNEN</title>
-</head>
+  </head>
 
-<body class="bg-dark">
+  <body class="bg-dark">
     <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light sticky-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">PNEN</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-              <a class="nav-link" aria-current="page" href="/about/">About</a>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Others
-                </a>
-                <ul class="dropdown-menu text-bg-secondary">
-                  <li><a class="dropdown-item btn btn-dark text-light" href="/asolo/">Solo</a></li>
-                  <li><a class="dropdown-item btn btn-dark text-light" href="/duo/">Duo</a></li>
-                  <li><a class="dropdown-item btn btn-dark text-light" href="/squad/">Squad</a></li>
-                </ul>
-              </li>
-            </div>
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark text-light sticky-top"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">PNEN</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" aria-current="page" href="/about/">About</a>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Others
+              </a>
+              <ul class="dropdown-menu text-bg-secondary">
+                <li>
+                  <a
+                    class="dropdown-item btn btn-dark text-light"
+                    href="/asolo/"
+                    >Solo</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item btn btn-dark text-light" href="/duo/"
+                    >Duo</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item btn btn-dark text-light"
+                    href="/squad/"
+                    >Squad</a
+                  >
+                </li>
+              </ul>
+            </li>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
     <!-- navbar end -->
 
     <!-- first section -->
-    <div class="container-fluid text-light" style="height:100vh;">
+    <div class="container-fluid text-light" style="height: 100vh">
       <!-- carousel start -->
       <div id="carouselExampleCaptions" class="carousel slide">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="/assets/gunung1.jpg" class="d-block w-100" alt="..." style="height: 400px;">
-          <div class="carousel-caption">
-            <h5>Gunung Gede</h5>
-            <p>Sebuah gunung yang berada di provinsi Jawa Barat, terkenal dengan alun-alun Surya Kencana.</p>
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="/assets/gunung1.jpg"
+              class="d-block w-100"
+              alt="..."
+              style="height: 400px"
+            />
+            <div class="carousel-caption">
+              <h5>Gunung Gede</h5>
+              <p>
+                Sebuah gunung yang berada di provinsi Jawa Barat, terkenal
+                dengan alun-alun Surya Kencana.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="/assets/gunung2.jpg"
+              class="d-block w-100"
+              alt="..."
+              style="height: 400px"
+            />
+            <div class="carousel-caption">
+              <h5>Gunung Slamet</h5>
+              <p>
+                Sebuah gunung yang berada di provinsi Jawa Tengah, salah satu
+                dari gunung 3S.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="/assets/gunung3.jpeg"
+              class="d-block w-100"
+              alt="..."
+              style="height: 400px"
+            />
+            <div class="carousel-caption">
+              <h5>Gunung Semeru</h5>
+              <p>
+                Sebuah gunung yang berada di provinsi Jawa Timur, one of The
+                Seven Summits of Indonesia.
+              </p>
+            </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="/assets/gunung2.jpg" class="d-block w-100" alt="..." style="height: 400px;">
-          <div class="carousel-caption">
-            <h5>Gunung Slamet</h5>
-            <p>Sebuah gunung yang berada di provinsi Jawa Tengah, salah satu dari gunung 3S.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="/assets/gunung3.jpeg" class="d-block w-100" alt="..." style="height: 400px;">
-          <div class="carousel-caption">
-            <h5>Gunung Semeru</h5>
-            <p>Sebuah gunung yang berada di provinsi Jawa Timur, one of The Seven Summits of Indonesia.</p>
-          </div>
-        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-      </div>
-    <!-- carousel end -->
+      <!-- carousel end -->
 
-    <!-- logo start -->
+      <!-- logo start -->
       <div class="row text-center align-items-center mt-4">
         <div class="col-12">
-          <img src="assets/logo.jpeg" width="200" height="200" style="border-radius: 2vh;">
+          <img
+            src="assets/logo.jpeg"
+            width="200"
+            height="200"
+            style="border-radius: 2vh"
+          />
           <h2 class="mt-2">P N E N</h2>
-          <p>Your <span style="color: gray;">travel buddy</span> hehe</p>
+          <p>Your <span style="color: gray">travel buddy</span> hehe</p>
         </div>
       </div>
       <!-- logo end -->
@@ -96,7 +189,9 @@
           <div class="card text-bg-secondary">
             <div class="card-body">
               <h5 class="card-title text-center">Solo</h5>
-              <p class="card-text text-center">Cocok buat kamu yang statusnya masih jomblo</p>
+              <p class="card-text text-center">
+                Cocok buat kamu yang statusnya masih jomblo
+              </p>
               <a href="/asolo/" class="btn btn-dark d-block">Chaw!</a>
             </div>
           </div>
@@ -105,7 +200,9 @@
           <div class="card text-bg-secondary">
             <div class="card-body">
               <h5 class="card-title text-center">Duo</h5>
-              <p class="card-text text-center">Bisa ajak pasangan atau bestie nich xixi</p>
+              <p class="card-text text-center">
+                Bisa ajak pasangan atau bestie nich xixi
+              </p>
               <a href="/duo/" class="btn btn-dark d-block">Cabs!</a>
             </div>
           </div>
@@ -114,34 +211,54 @@
           <div class="card text-bg-secondary">
             <div class="card-body">
               <h5 class="card-title text-center">Squad</h5>
-              <p class="card-text text-center">Traveling sama keluarga ataupun bareng tongkrongan</p>
+              <p class="card-text text-center">
+                Traveling sama keluarga ataupun bareng tongkrongan
+              </p>
               <a href="/squad/" class="btn btn-dark d-block">Gouw!</a>
             </div>
           </div>
         </div>
       </div>
-      <!-- card end --> 
+      <!-- card end -->
 
       <!-- sosmed start -->
-        <div class="row text-center align-items-center mt-4">
-          <h3>Contact Us</h3>
-          <ul>
-            <p>Email: travelwithcakrawala.14@gmail.com</p>
-            <a href="https://wa.me/6285162784191/?text=hallo!">
-              <img src="assets/whatsapp.png" height="50" width="50" style="border-radius: 10px;">
-            </a>
-            <a href="https://web.telegram.org/">
-              <img src="assets/telegram.png" height="50" width="50" style="border-radius: 10px;">
-            </a>
-            <a href="https://www.instagram.com/cakrawala.14/">
-              <img src="assets/instagram.png" height="50" width="50" style="border-radius: 10px;">
-            </a>
-          </ul>
-        </div>
+      <div class="row text-center align-items-center mt-4">
+        <h3>Contact Us</h3>
+        <ul>
+          <p>Email: travelwithcakrawala.14@gmail.com</p>
+          <a href="https://wa.me/6285162784191/?text=hallo!">
+            <img
+              src="assets/whatsapp.png"
+              height="50"
+              width="50"
+              style="border-radius: 10px"
+            />
+          </a>
+          <a href="https://web.telegram.org/">
+            <img
+              src="assets/telegram.png"
+              height="50"
+              width="50"
+              style="border-radius: 10px"
+            />
+          </a>
+          <a href="https://www.instagram.com/cakrawala.14/">
+            <img
+              src="assets/instagram.png"
+              height="50"
+              width="50"
+              style="border-radius: 10px"
+            />
+          </a>
+        </ul>
+      </div>
       <!-- sosmed end -->
-
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
