--- a/about/index.html
+++ b/about/index.html
@@ -1,45 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <title>ABOUT PAGE</title>
-</head>
+  </head>
 
-<body class="bg-dark">
+  <body class="bg-dark">
     <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light sticky-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">PNEN</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
-              <a class="nav-link active" aria-current="page" href="/about/">About</a>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Others
-                </a>
-                <ul class="dropdown-menu text-bg-secondary">
-                  <li><a class="dropdown-item btn btn-dark text-light" href="/asolo/">Solo</a></li>
-                  <li><a class="dropdown-item btn btn-dark text-light" href="/duo/">Duo</a></li>
-                  <li><a class="dropdown-item btn btn-dark text-light" href="/squad/">Squad</a></li>
-                </ul>
-              </li>
-            </div>
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark text-light sticky-top"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">PNEN</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/about/"
+              >About</a
+            >
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Others
+              </a>
+              <ul class="dropdown-menu text-bg-secondary">
+                <li>
+                  <a
+                    class="dropdown-item btn btn-dark text-light"
+                    href="/asolo/"
+                    >Solo</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item btn btn-dark text-light" href="/duo/"
+                    >Duo</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item btn btn-dark text-light"
+                    href="/squad/"
+                    >Squad</a
+                  >
+                </li>
+              </ul>
+            </li>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
     <!-- navbar end -->
 
     <!-- first layout -->
-    <div>
-      
-    </div>
+    <div></div>
     <!-- layout end -->
 
     <!-- sosmed start -->
@@ -48,19 +85,37 @@
       <ul>
         <p>Email: travelwithcakrawala.14@gmail.com</p>
         <a href="https://wa.me/6285162784191/?text=hallo!">
-          <img src="/assets/whatsapp.png" height="50" width="50" style="border-radius: 10px;">
+          <img
+            src="/assets/whatsapp.png"
+            height="50"
+            width="50"
+            style="border-radius: 10px"
+          />
         </a>
         <a href="https://web.telegram.org/">
-          <img src="/assets/telegram.png" height="50" width="50" style="border-radius: 10px;">
+          <img
+            src="/assets/telegram.png"
+            height="50"
+            width="50"
+            style="border-radius: 10px"
+          />
         </a>
         <a href="https://www.instagram.com/cakrawala.14/">
-          <img src="/assets/instagram.png" height="50" width="50" style="border-radius: 10px;">
+          <img
+            src="/assets/instagram.png"
+            height="50"
+            width="50"
+            style="border-radius: 10px"
+          />
         </a>
       </ul>
     </div>
     <!-- sosmed end -->
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
