--- a/asolo/index.html
+++ b/asolo/index.html
@@ -73,9 +73,10 @@
     </nav>
     <!-- navbar end -->
 
-    <!-- card start -->
+    <!-- first section -->
     <div class="container-fluid text-light">
-      <div class="card text-center mt-4 text-bg-secondary">
+      <!-- card start -->
+      <div class="card text-center mt-2 text-bg-secondary">
         <div class="card-header">Tersedia!</div>
         <div class="card-body">
           <h5 class="card-title">Gunung Gede</h5>
@@ -84,7 +85,7 @@
             alun-alun Surya Kencana
           </p>
           <a
-            href="https://wa.me/6285162784191/?text=Hai Admin Ganteng😍 Aku mau pesan paket Solo dengan destinasi Gunung Guntur!"
+            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Solo dengan destinasi Gunung Gede!"
             class="btn btn-dark"
             >Gas order!</a
           >
@@ -99,7 +100,11 @@
             Salah satu dari seven summits Indonesia yang berada di kepulauan
             Nusa Tenggara Barat
           </p>
-          <a href="#" class="btn btn-dark">Gas order!</a>
+          <a
+            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Solo dengan destinasi Gunung Rinjani!"
+            class="btn btn-dark"
+            >Gas order!</a
+          >
         </div>
         <div class="card-footer text-body-light">Rp. 950.000,00/orang</div>
       </div>
@@ -111,7 +116,11 @@
             Gunung yang memiliki track terpanjang di pulau jawa dan berada di
             provinsi jawa timur
           </p>
-          <a href="#" class="btn btn-dark">Gas order!</a>
+          <a
+            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Solo dengan destinasi Gunung Merbabu!"
+            class="btn btn-dark"
+            >Gas order!</a
+          >
         </div>
         <div class="card-footer text-body-light">Rp.550.000,00/orang</div>
       </div>
@@ -123,7 +132,11 @@
             Sebuah gunung yang berada di provinsi Jawa Tengah, terkenal dengan
             warung Mbok Yem
           </p>
-          <a href="#" class="btn btn-dark">Gas order!</a>
+          <a
+            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Solo dengan destinasi Gunung Lawu!"
+            class="btn btn-dark"
+            >Gas order!</a
+          >
         </div>
         <div class="card-footer text-body-light">Rp. 450.000,00/orang</div>
       </div>
@@ -135,7 +148,11 @@
             Cocok untuk pendaki pemula karena memiliki jalur pendakian yang
             tidak terlalu berat
           </p>
-          <a href="#" class="btn btn-dark">Gas order!</a>
+          <a
+            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Solo dengan destinasi Gunung Guntur!"
+            class="btn btn-dark"
+            >Gas order!</a
+          >
         </div>
         <div class="card-footer text-body-light">Rp. 400.000,00/orang</div>
       </div>
@@ -147,45 +164,49 @@
             Gunung yang memiliki panorama sabana pasir vulkanik yang sangat
             indah dan seringkali ramai oleh para wisatawan asing
           </p>
-          <a href="#" class="btn btn-dark">Gas order!</a>
+          <a
+            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Solo dengan destinasi Gunung Bromo!"
+            class="btn btn-dark"
+            >Gas order!</a
+          >
         </div>
         <div class="card-footer text-body-light">Rp. 1.000.000,00/orang</div>
       </div>
-    </div>
-    <!-- card end -->
+      <!-- card end -->
 
-    <!-- sosmed start -->
-    <div class="row text-light text-center align-items-center mt-4">
-      <h3>Contact Us</h3>
-      <ul>
-        <p>Email: travelwithcakrawala.14@gmail.com</p>
-        <a href="https://wa.me/6285162784191/?text=hallo!">
-          <img
-            src="/assets/whatsapp.png"
-            height="50"
-            width="50"
-            style="border-radius: 10px"
-          />
-        </a>
-        <a href="https://web.telegram.org/">
-          <img
-            src="/assets/telegram.png"
-            height="50"
-            width="50"
-            style="border-radius: 10px"
-          />
-        </a>
-        <a href="https://www.instagram.com/cakrawala.14/">
-          <img
-            src="/assets/instagram.png"
-            height="50"
-            width="50"
-            style="border-radius: 10px"
-          />
-        </a>
-      </ul>
+      <!-- sosmed start -->
+      <div class="row text-light text-center align-items-center mt-4">
+        <h3>Contact Us</h3>
+        <ul>
+          <p>Email: travelwithcakrawala.14@gmail.com</p>
+          <a href="https://wa.me/6285162784191/?text=hallo!">
+            <img
+              src="/assets/whatsapp.png"
+              height="50"
+              width="50"
+              style="border-radius: 10px"
+            />
+          </a>
+          <a href="https://web.telegram.org/">
+            <img
+              src="/assets/telegram.png"
+              height="50"
+              width="50"
+              style="border-radius: 10px"
+            />
+          </a>
+          <a href="https://www.instagram.com/cakrawala.14/">
+            <img
+              src="/assets/instagram.png"
+              height="50"
+              width="50"
+              style="border-radius: 10px"
+            />
+          </a>
+        </ul>
+      </div>
+      <!-- sosmed end -->
     </div>
-    <!-- sosmed end -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
