--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="/assets/gunung1.jpg"
+              src="/tools/gunung1.jpg"
               class="d-block w-100"
               alt="..."
               style="height: 400px"
@@ -118,7 +118,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="/assets/gunung2.jpg"
+              src="/tools/gunung2.jpg"
               class="d-block w-100"
               alt="..."
               style="height: 400px"
@@ -133,7 +133,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="/assets/gunung3.jpeg"
+              src="/tools/gunung3.jpeg"
               class="d-block w-100"
               alt="..."
               style="height: 400px"
@@ -172,7 +172,7 @@
       <div class="row text-center align-items-center mt-4">
         <div class="col-12">
           <img
-            src="assets/logo.jpeg"
+            src="/tools/logo.jpeg"
             width="200"
             height="200"
             style="border-radius: 2vh"
@@ -228,7 +228,7 @@
           <p>Email: travelwithcakrawala.14@gmail.com</p>
           <a href="https://wa.me/6285162784191/?text=hallo!">
             <img
-              src="assets/whatsapp.png"
+              src="/tools/whatsapp.png"
               height="50"
               width="50"
               style="border-radius: 10px"
@@ -236,7 +236,7 @@
           </a>
           <a href="https://web.telegram.org/">
             <img
-              src="assets/telegram.png"
+              src="/tools/telegram.png"
               height="50"
               width="50"
               style="border-radius: 10px"
@@ -244,7 +244,7 @@
           </a>
           <a href="https://www.instagram.com/cakrawala.14/">
             <img
-              src="assets/instagram.png"
+              src="/tools/instagram.png"
               height="50"
               width="50"
               style="border-radius: 10px"
