--- a/about/index.html
+++ b/about/index.html
@@ -76,41 +76,40 @@
     <!-- navbar end -->
 
     <!-- first layout -->
-    <div></div>
-    <!-- layout end -->
-
-    <!-- sosmed start -->
-    <div class="row text-center text-light align-items-center mt-4">
-      <h3>Contact Us</h3>
-      <ul>
-        <p>Email: travelwithcakrawala.14@gmail.com</p>
-        <a href="https://wa.me/6285162784191/?text=hallo!">
-          <img
-            src="/assets/whatsapp.png"
-            height="50"
-            width="50"
-            style="border-radius: 10px"
-          />
-        </a>
-        <a href="https://web.telegram.org/">
-          <img
-            src="/assets/telegram.png"
-            height="50"
-            width="50"
-            style="border-radius: 10px"
-          />
-        </a>
-        <a href="https://www.instagram.com/cakrawala.14/">
-          <img
-            src="/assets/instagram.png"
-            height="50"
-            width="50"
-            style="border-radius: 10px"
-          />
-        </a>
-      </ul>
+    <div class="container-fluid text-light">
+      <!-- sosmed start -->
+      <div class="row text-center text-light align-items-center mt-4">
+        <h3>Contact Us</h3>
+        <ul>
+          <p>Email: travelwithcakrawala.14@gmail.com</p>
+          <a href="https://wa.me/6285162784191/?text=hallo!">
+            <img
+              src="/tools/whatsapp.png"
+              height="50"
+              width="50"
+              style="border-radius: 10px"
+            />
+          </a>
+          <a href="https://web.telegram.org/">
+            <img
+              src="/tools/telegram.png"
+              height="50"
+              width="50"
+              style="border-radius: 10px"
+            />
+          </a>
+          <a href="https://www.instagram.com/cakrawala.14/">
+            <img
+              src="/tools/instagram.png"
+              height="50"
+              width="50"
+              style="border-radius: 10px"
+            />
+          </a>
+        </ul>
+      </div>
+      <!-- sosmed end -->
     </div>
-    <!-- sosmed end -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
