--- a/duo/index.html
+++ b/duo/index.html
@@ -181,7 +181,7 @@
           <p>Email: travelwithcakrawala.14@gmail.com</p>
           <a href="https://wa.me/6285162784191/?text=hallo!">
             <img
-              src="/assets/whatsapp.png"
+              src="/tools/whatsapp.png"
               height="50"
               width="50"
               style="border-radius: 10px"
@@ -189,7 +189,7 @@
           </a>
           <a href="https://web.telegram.org/">
             <img
-              src="/assets/telegram.png"
+              src="/tools/telegram.png"
               height="50"
               width="50"
               style="border-radius: 10px"
@@ -197,7 +197,7 @@
           </a>
           <a href="https://www.instagram.com/cakrawala.14/">
             <img
-              src="/assets/instagram.png"
+              src="/tools/instagram.png"
               height="50"
               width="50"
               style="border-radius: 10px"
