add css styling

--- a/asolo/index.html
+++ b/asolo/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../style.css" />
     <title>SOLO PAGE</title>
   </head>
 
@@ -180,28 +181,13 @@
         <ul>
           <p>Email: travelwithcakrawala.14@gmail.com</p>
           <a href="https://wa.me/6285162784191/?text=hallo!">
-            <img
-              src="/tools/whatsapp.png"
-              height="50"
-              width="50"
-              style="border-radius: 10px"
-            />
+            <img src="/tools/whatsapp.png" class="sosmed" />
           </a>
           <a href="https://web.telegram.org/">
-            <img
-              src="/tools/telegram.png"
-              height="50"
-              width="50"
-              style="border-radius: 10px"
-            />
+            <img src="/tools/telegram.png" class="sosmed" />
           </a>
           <a href="https://www.instagram.com/cakrawala.14/">
-            <img
-              src="/tools/instagram.png"
-              height="50"
-              width="50"
-              style="border-radius: 10px"
-            />
+            <img src="/tools/instagram.png" class="sosmed" />
           </a>
         </ul>
       </div>
