--- a/index.html
+++ b/index.html
@@ -227,28 +227,13 @@
         <ul>
           <p>Email: travelwithcakrawala.14@gmail.com</p>
           <a href="https://wa.me/6285162784191/?text=hallo!">
-            <img
-              src="/tools/whatsapp.png"
-              height="50"
-              width="50"
-              style="border-radius: 10px"
-            />
+            <img src="/tools/whatsapp.png" class="sosmed" />
           </a>
           <a href="https://web.telegram.org/">
-            <img
-              src="/tools/telegram.png"
-              height="50"
-              width="50"
-              style="border-radius: 10px"
-            />
+            <img src="/tools/telegram.png" class="sosmed" />
           </a>
           <a href="https://www.instagram.com/cakrawala.14/">
-            <img
-              src="/tools/instagram.png"
-              height="50"
-              width="50"
-              style="border-radius: 10px"
-            />
+            <img src="/tools/instagram.png" class="sosmed" />
           </a>
         </ul>
       </div>
