--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="/tools/logo.jpeg" type="image/icon type" />
     <link rel="stylesheet" href="style.css" />
     <title>TRAVEL GUIDE by PNEN</title>
   </head>
 
-  <body class="bg-dark">
+  <body>
     <!-- navbar start -->
     <nav
       class="navbar navbar-expand-lg navbar-dark bg-dark text-light sticky-top"
@@ -76,97 +77,12 @@
 
     <!-- first section -->
     <div class="container-fluid text-light" style="height: 100vh">
-      <!-- carousel start -->
-      <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="/tools/gunung1.jpg"
-              class="d-block w-100"
-              alt="..."
-              style="height: 400px"
-            />
-            <div class="carousel-caption">
-              <h5>Gunung Gede</h5>
-              <p>
-                Sebuah gunung yang berada di provinsi Jawa Barat, terkenal
-                dengan alun-alun Surya Kencana.
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="/tools/gunung2.jpg"
-              class="d-block w-100"
-              alt="..."
-              style="height: 400px"
-            />
-            <div class="carousel-caption">
-              <h5>Gunung Slamet</h5>
-              <p>
-                Sebuah gunung yang berada di provinsi Jawa Tengah, salah satu
-                dari gunung 3S.
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="/tools/gunung3.jpeg"
-              class="d-block w-100"
-              alt="..."
-              style="height: 400px"
-            />
-            <div class="carousel-caption">
-              <h5>Gunung Semeru</h5>
-              <p>
-                Sebuah gunung yang berada di provinsi Jawa Timur, one of The
-                Seven Summits of Indonesia.
-              </p>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      <!-- judul start -->
+      <div class="judul">
+        <h1>OPEN TRIP WITH PNEN</h1>
+        <p>Berpengalaman lebih dari 50+ gunung di Indonesia</p>
       </div>
-      <!-- carousel end -->
+      <!-- judul end -->
 
       <!-- logo start -->
       <div class="row text-center align-items-center mt-4">
