--- a/about/index.html
+++ b/about/index.html
@@ -10,11 +10,12 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="/tools/logo.jpeg" type="image/icon type" />
     <link rel="stylesheet" href="../style.css" />
     <title>ABOUT PAGE</title>
   </head>
 
-  <body class="bg-dark">
+  <body>
     <!-- navbar start -->
     <nav
       class="navbar navbar-expand-lg navbar-dark bg-dark text-light sticky-top"
