--- a/duo/index.html
+++ b/duo/index.html
@@ -10,11 +10,12 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="/tools/logo.jpeg" type="image/icon type" />
     <link rel="stylesheet" href="../style.css" />
     <title>DUO PAGE</title>
   </head>
 
-  <body class="bg-dark">
+  <body>
     <!-- navbar start -->
     <nav
       class="navbar navbar-expand-lg navbar-dark bg-dark text-light sticky-top"
@@ -77,7 +78,7 @@
     <!-- first layout -->
     <div class="container-fluid text-light">
       <!-- card start -->
-      <div class="card text-center mt-4 text-bg-secondary">
+      <div class="card text-center mt-2 text-bg-secondary">
         <div class="card-header">Tersedia!</div>
         <div class="card-body">
           <h5 class="card-title">Gunung Gede</h5>
